fix: text alignment with boxes and buttons

--- a/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/components/_button.scss
+++ b/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/components/_button.scss
@@ -169,7 +169,6 @@ button {
 .filter-settings-button.btn {
   font-style: normal;
   font-weight: 700;
-  line-height: 27.008px;
   font-family: "BC Sans";
 }
 
